<resources>
    <string name="app_name">PokerApp</string>

    <!-- DESCRIPTIONS -->
    <string name="themeDesc">App main theme</string>

    <!-- BUTTON TEXT -->
    <string name="search">Search</string>
    <string name="stop">Stop</string>
    <string name="request">Request</string>
    <string name="join_room">Join Room</string>
    <string name="start_game">Start Game</string>
    <string name="send">Send</string>
    <string name="available_peers">Available peers:</string>
    <string name="group_members">Group members:</string>
    <string name="fold">Fold</string>
    <string name="check">Check</string>
    <string name="call">Call</string>
    <string name="raise">Raise</string>
    <string name="all_in">AllIn</string>
    <string name="player_s_first_card">Player\'s first card</string>
    <string name="player_s_second_card">Player\'s second card</string>
    <string name="pool">Pool:</string>
    <string name="player_card">Player\'s card</string>

</resources>