<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true">
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/theme"
        android:scaleType="fitXY"
        android:contentDescription="@string/themeDesc" />

    <Button
        android:id="@+id/btnStartDiscovering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_bg_color"
        android:text="@string/search"
        android:textColor="@color/btn_text"
        android:layout_toStartOf="@+id/btnStopDiscovering"
        android:layout_alignBaseline="@+id/btnStopDiscovering"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/btnStopDiscovering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_bg_color"
        android:text="@string/stop"
        android:textColor="@color/btn_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/btnRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_bg_color"
        android:text="@string/request"
        android:textColor="@color/btn_text"
        android:layout_toEndOf="@+id/btnStopDiscovering"
        android:layout_alignBaseline="@+id/btnStopDiscovering"/>

    <TextView
        android:id="@+id/textViewPeers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_peers"
        android:textColor="@color/labels"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnStopDiscovering"
        android:layout_marginTop="16dp"/>

    <ListView
        android:id="@+id/listViewPeers"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/listView"
        android:layout_below="@+id/textViewPeers"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <TextView
        android:id="@+id/textViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_members"
        android:textColor="@color/labels"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/listViewPeers"
        android:layout_marginTop="16dp"/>

    <ListView
        android:id="@+id/listViewConnectedDevices"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/listView"
        android:layout_below="@+id/textViewGroup"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <Button
        android:id="@+id/btnRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_bg_color"
        android:text="@string/join_room"
        android:textColor="@color/btn_text"
        android:layout_below="@id/listViewConnectedDevices"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnSend"
        android:layout_marginStart="16dp"
        android:autofillHints="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_bg_color"
        android:text="@string/send"
        android:textColor="@color/btn_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>